@@ -27,6 +27,8 @@ USER-VISIBLE CHANGES
     of optim. Parameter estimation is then carried out on params/parscale which
     improves convergence.
   - parscale method for FLModel.
+  - window method now accepts numeric values for the extend argument in window. Objects
+    are extended along the year dimension for as many years as indicated.
 
 BUG FIXES
   - FS#2 - FLCohort breaks for a single age quant.
